fix overflow of too large elements fix #49

--- a/src/assets/styles/_components.page.css
+++ b/src/assets/styles/_components.page.css
@@ -3,6 +3,10 @@
    ========================================================================== */
 
 .c-page {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.c-page__main {
+    flex: 1;
 }
